@@ -1,3 +1,9 @@
+2012-12-07  Martin Jambor  <mjambor@suse.cz>
+
+	PR tree-optimization/55590
+	* gcc.target/i386/pr55590-1.c: New test.
+	* gcc.target/i386/pr55590-2.c: Likewise.
+
 2012-12-07  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/54975
