@@ -1,4 +1,8 @@
-2012-12-06  Jason Merrill  <jason@redhat.com>
+2012-12-07  Martin Jambor  <mjambor@suse.cz>
+
+	PR tree-optimization/55590
+	* tree-sra.c (build_ref_for_offset): Use get_object_alignment_1 to
+	get base alignment.
 
 2012-12-06  Uros Bizjak  <ubizjak@gmail.com>
 	    H.J. Lu  <hongjiu.lu@intel.com>
